--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,11 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<% provide(:title, "Contact") %>
+<h1>Contact</h1>
+<p>
+  David Stevens
+  <br>
+  (Data Scientist // Brunch Aficionado)
+  <br>
+  Instagram: <a href="https://www.instagram.com/whens.brunch/">@whens.brunch</a>
+  <br>
+  Github: <a href="https://github.com/whensbrunch">whensbrunch</a>
+</p>
