--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,11 @@
-<h1>Brunch Finder</h1>
-<p>
-  This is the home page for a brunch finder in Buenos Aires.
-</p>
+<div class="center jumbotron">
+  <h1>Brunch Finder</h1>
+  <p>
+    This is the home page for a brunch finder in Buenos Aires.
+  </p>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%#= link_to image_tag("tsitsi.png", alt: "Tsiya"),
+            'http://rubyonrails.org/' %>
