switch sign up button for add brunch button

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,7 +5,8 @@
     This is the home page for a brunch finder in Buenos Aires.
   </p>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <!-- <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %> -->
+  <%= link_to "Add brunch place", new_restaurant_path, class: "btn btn-lg btn-primary" %>
 
   <br>
   <br>
