leaflet-rails works

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -10,20 +10,23 @@
 
   <br>
   <br>
-  <div id="mapid">
-    <script>
-    var mymap = L.map('mapid').setView([-34.5781989, -58.4381492], 13);
+  <div id="coordinates" data-coord=<%= @restaurants.first.latitude %>>
+    Fetching coordinates...
+  </div>
+  <div id="map">
+    <%= map(:center => {
+        :latlng => [-34.5781989, -58.4381492],
+        :zoom => 13
+      },
+      :tile_layer => "https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=sk.eyJ1Ijoid2hlbnNicnVuY2giLCJhIjoiY2o4ZHM5dGk0MHNnYzMzb2syODJoeHRhcCJ9.90qVchOiN_g4dgUDBensMA",
+      :attribution => 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+      :max_zoom => 18,
+      :id => 'mapbox.streets',
+      :accessToken => 'sk.eyJ1Ijoid2hlbnNicnVuY2giLCJhIjoiY2o4ZHM5dGk0MHNnYzMzb2syODJoeHRhcCJ9.90qVchOiN_g4dgUDBensMA'
+    )%>
 
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=sk.eyJ1Ijoid2hlbnNicnVuY2giLCJhIjoiY2o4ZHM5dGk0MHNnYzMzb2syODJoeHRhcCJ9.90qVchOiN_g4dgUDBensMA', {
-        attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-        maxZoom: 18,
-        id: 'mapbox.streets',
-        accessToken: 'sk.eyJ1Ijoid2hlbnNicnVuY2giLCJhIjoiY2o4ZHM5dGk0MHNnYzMzb2syODJoeHRhcCJ9.90qVchOiN_g4dgUDBensMA'
-    }).addTo(mymap);
+    <!-- Load external javascript -->
 
-    var marker = L.marker([-34.578, -58.438]).addTo(mymap); 
-    marker.bindPopup("<b>Hello world!</b><br>I am a popup.");
-    </script>
 
     <!-- <% markers = [] %>
     <% @restaurants.each do |r| %>
