--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -10,32 +10,10 @@
 
   <br>
   <br>
-  <div id="coordinates" data-coord=<%= @restaurants.first.latitude %>>
-    Fetching coordinates...
-  </div>
-  <div id="map">
-    <%= map(:center => {
-        :latlng => [-34.5781989, -58.4381492],
-        :zoom => 13
-      },
-      :tile_layer => "https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=sk.eyJ1Ijoid2hlbnNicnVuY2giLCJhIjoiY2o4ZHM5dGk0MHNnYzMzb2syODJoeHRhcCJ9.90qVchOiN_g4dgUDBensMA",
-      :attribution => 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-      :max_zoom => 18,
-      :id => 'mapbox.streets',
-      :accessToken => 'sk.eyJ1Ijoid2hlbnNicnVuY2giLCJhIjoiY2o4ZHM5dGk0MHNnYzMzb2syODJoeHRhcCJ9.90qVchOiN_g4dgUDBensMA'
-    )%>
-
-    <!-- Load external javascript -->
-
-
-    <!-- <% markers = [] %>
-    <% @restaurants.each do |r| %>
-      <% markers << "markers=#{r.latitude},#{r.longitude}" %>
-    <% end %>
-    <% markers = markers.join("&") %>
-    <%= image_tag "http://maps.googleapis.com/maps/api/staticmap?#{markers}&zoom=13&size=640x400&key=AIzaSyA4BHW3txEdqfxzdTlPwaHsYRSZbfeIcd8",
-                  class: 'img-fluid img-rounded', alt: "#{@restaurants.first.name} on the map"%> -->
-</div>
+  <% javascript_include_tag "restaurants_to_map" %>
+  <%= content_tag :div , id: "coordinates-div", data: {coordinates: @restaurants} do %>
+  <% end %>
+  <div id="map"></div>
 </div>
 
 <%#= link_to image_tag("tsitsi.png", alt: "Tsiya"),
