--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: restaurant, local: true) do |form| %>
   <% if restaurant.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(restaurant.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
 
       <ul>
       <% restaurant.errors.full_messages.each do |message| %>
