--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,8 +5,8 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <!-- <%= form_for(@user, url: signup_path) do |f| %>
-      <%= render 'shared/error_messages' %>
+    <%= form_for(@user, url: signup_path) do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
 
@@ -20,7 +20,7 @@
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %> -->
-    <%= render 'form' %>
+    <% end %>
+    <!-- <%= render 'form' %> -->
   </div>
 </div>
