--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,4 +7,14 @@
         <%= @user.name %>
       </h1>
     </section>
+  </aside>
+  <div class="col-md-8">
+  <% if @user.reviews.any? %>
+    <h3> Reviews (<%= @user.reviews.count %>)</h3>
+    <ol class="reviews">
+      <%= render @reviews %>
+    </ol>
+    <%= will_paginate @reviews %>
+  <% end %>
+  </div>
 </div>
