--- a/app/views/restaurants/_map.html.erb
+++ b/app/views/restaurants/_map.html.erb
@@ -1,4 +1,5 @@
-<div class="center jumbotron">
+<div class="col-md-8">
+  <div class="center jumbotron">
   <h1>Brunch Finder</h1>
   <p>
     This is the home page for a brunch finder in Buenos Aires.
@@ -8,20 +9,9 @@
   <%= link_to "Add brunch place", new_restaurant_path, class: "btn btn-lg btn-primary" %>
   <br>
   <br>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <b>Filter by tag:</b>
-      <%= form_tag "/", method: "get" do %>
-        <%= select_tag 'tag', options_from_collection_for_select(@tags, 'id', 'name') %>
-        <%= submit_tag "Filter" %>
-      <% end %>
-    </div>
-  </div>
-
-  <br>
-  <br>
   <% javascript_include_tag "restaurants_to_map" %>
   <%= content_tag :div , id: "coordinates-div", data: {coordinates: @restaurants} do %>
   <% end %>
   <div id="map"></div>
+</div>
 </div>
