--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -9,23 +9,7 @@
         <%= render 'shared/review_form' %>
       </section>
     </aside>
-    <div class="col-md-8">
-      <div class="center jumbotron">
-      <h1>Brunch Finder</h1>
-      <p>
-        This is the home page for a brunch finder in Buenos Aires.
-      </p>
-
-      <!-- <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %> -->
-      <%= link_to "Add brunch place", new_restaurant_path, class: "btn btn-lg btn-primary" %>
-      <br>
-      <br>
-      <% javascript_include_tag "restaurants_to_map" %>
-      <%= content_tag :div , id: "coordinates-div", data: {coordinates: @restaurants} do %>
-      <% end %>
-      <div id="map"></div>
-    </div>
-    </div>
+    <%= render 'map' %>
   </div>
 <% else %>
   <%= render 'map' %>
