get search working

--- a/app/views/restaurants/_map.html.erb
+++ b/app/views/restaurants/_map.html.erb
@@ -7,6 +7,13 @@
 
   <!-- <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %> -->
   <%= link_to "Add brunch place", new_restaurant_path, class: "btn btn-lg btn-primary" %>
+  <form class="" action="/restaurants" method="get">
+    <input type="text" name="restaurant[name]" placeholder="Search for a restaurant...", data-behavior="find", value="">
+    <input type="hidden" name="restaurant[id]" id="find_restaurant_id" value="">
+    <input type="submit" name="commit" value="Search" class="btn btn-primary">
+  </form>
+  <br>
+  <br>
   <br>
   <br>
   <% javascript_include_tag "restaurants_to_map" %>
