fix up restaurant page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -42,6 +42,13 @@ textarea {
   }
 }
 
+div {
+  padding-top: 10px;
+  padding-right: 1px;
+  padding-bottom: 1px;
+  padding-left: 1px;
+}
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
