--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,22 +1,36 @@
 <% provide :title, @restaurant.name %>
 <div class="row">
-  <aside class="col-md-4">
+  <aside class="col-md-6">
     <section>
-      <h1>
-        <%= @restaurant.name %>
+      <h3><%= @restaurant.name %></h3>
+      <h3>
         <%= image_tag "http://maps.googleapis.com/maps/api/staticmap?center=#{@restaurant.latitude},#{@restaurant.longitude}&markers=#{@restaurant.latitude},#{@restaurant.longitude}&zoom=13&size=640x400&key=AIzaSyA4BHW3txEdqfxzdTlPwaHsYRSZbfeIcd8",
                       class: 'img-fluid img-rounded', alt: "#{@restaurant.name} on the map"%>
-      </h1>
-      <p>Address: <%= @restaurant.address %></p>
+      </h3>
+      <p><b>Address:</b> <%= @restaurant.address %></p>
     </section>
   </aside>
-  <div class="col-md-8">
+  <div class="col-md-6">
   <% if @restaurant.reviews.any? %>
     <h3> Reviews (<%= @restaurant.reviews.count %>)</h3>
     <ol class="reviews">
       <%= render @reviews %>
     </ol>
     <%= will_paginate @reviews %>
+  <% else %>
+    <h3> No reviews yet 😥 </h3>
+    <h3> Wanna be the first? </h3>
+    <%= form_for(@review) do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
+      <div class="field">
+        <%= f.hidden_field :restaurant_id, :value => params[:id] %>
+        <%= f.text_area :content, placeholder: "Your review awaits..." %>
+      </div>
+      <%= f.submit "Post", class: "btn btn-primary" %>
+      <span class="picture">
+        <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+      </span>
+    <% end %>
   <% end %>
   </div>
 </div>
