update about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,20 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
+
+<h2>What is brunch?</h2>
+
 <p>
-  This is an app to find the right brunch in Buenos Aires for you.
+The perfect meal in the time between breakfast and lunch (or whenever you wake
+up tbh), usually taken on the weekends with friends and mimosas. Brunch has a
+long, illustrious history in the United States, having served as the focal
+point of weekend boozing and dining since the 1930s.
+<p>
+
+<h2>What's the point of this app?</h2>
+
+<p>
+We're here to be your partner in the brunch finding process. As brunch grows
+in popularity in Buenos Aires, the options will surely grow out of control.
+This app serves to help you discover places that serve brunch and to help inform
+you of quality via user reviews. ¡Buen provecho!
 </p>
