--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
         <!-- <li><%= link_to "Help",   help_path %></li> -->
         <!-- <li><%= link_to "Log in", '#' %></li> -->
         <% if logged_in? %>
+          <li><%= link_to "About", '/about  ' %></li>
           <li><%= link_to "Brunchers", users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
