update about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,7 +4,7 @@
 <h2>What is brunch?</h2>
 
 <p>
-The perfect meal in the time between breakfast and lunch (or whenever you wake
+Brunch is the perfect meal in the time between breakfast and lunch (or whenever you wake
 up tbh), usually taken on the weekends with friends and mimosas. Brunch has a
 long, illustrious history in the United States, having served as the focal
 point of weekend boozing and dining since the 1930s.
